--- a/engage-demo-app/src/main/res/layout/activity_main.xml
+++ b/engage-demo-app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="adeprimo.com.engageexample.adeprimo.com.engagetrackerdemo.MainActivity">
-
-    <TextView
-        android:id="@+id/kilometers_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
-
-</android.support.constraint.ConstraintLayout>
+    tools:context="adeprimo.com.engageexample.adeprimo.com.engagetrackerdemo.MainActivity"/>
