--- a/engage-demo-app/src/main/res/layout/activity_main.xml
+++ b/engage-demo-app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="adeprimo.com.engageexample.adeprimo.com.engagetrackerdemo.MainActivity"/>
+    tools:context="adeprimo.com.engagetrackerdemo.MainActivity">
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="buttonClick"
+        android:text="Click me"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</android.support.constraint.ConstraintLayout>
